RESOLVED FIXED55706
AX: WK1 needs to use ScrollView attachment for AXScrollArea, WK2 does not
https://bugs.webkit.org/show_bug.cgi?id=55706
Summary AX: WK1 needs to use ScrollView attachment for AXScrollArea, WK2 does not
chris fleizach
Reported 2011-03-03 14:33:24 PST
In WK1, ScrollView does not have a handle on the scroll bars. those are handled by the platformWidget In WK2, ScrollView does have a handle on the scroll bars, since there is no platform widget The changes to support WK2 Scroll views did not account for this. The fix is to expose the platform widget as the parent of the web area in WK1 and use the ScrollView AX object representation in WK2
Attachments
patch (13.85 KB, patch)
2011-03-03 14:57 PST, chris fleizach
bdakin: review+
chris fleizach
Comment 1 2011-03-03 14:57:43 PST
chris fleizach
Comment 2 2011-03-07 14:31:51 PST
Note You need to log in before you can comment on or make changes to this bug.