Source/WebCore: AX: WK1 needs to use ScrollView attachment for AXScrollArea, WK2 does not https://bugs.webkit.org/show_bug.cgi?id=55706

Reviewed by Beth Dakin.

* WebCore.exp.in:
* accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::rootObjectForFrame):
* accessibility/AXObjectCache.h:
* accessibility/AccessibilityScrollView.cpp:
(WebCore::AccessibilityScrollView::isAttachment):
(WebCore::AccessibilityScrollView::widgetForAttachmentView):
* accessibility/AccessibilityScrollView.h:
(WebCore::AccessibilityScrollView::firstChild):
* accessibility/mac/AccessibilityObjectWrapper.mm:
(-[AccessibilityObjectWrapper accessibilityAttributeValue:]):

Source/WebKit/mac: AX: WK1 needs to use ScrollView attachment for AXScrollArea, WK2 does not
https://bugs.webkit.org/show_bug.cgi?id=55706

Reviewed by Beth Dakin.

Make sure WebDynamicScrollBarsView appear in the AX tree in WK1 (since this object
returns the scroll bar objects).
Make the accessibilityRoot object be the web area in WK1 because WebDynamicScrollBarsView
will expect that as its child, instead of the WebCore ScrollView object.

* WebView/WebDynamicScrollBarsView.mm:
(-[WebDynamicScrollBarsView accessibilityIsIgnored]):
* WebView/WebFrame.mm:
(-[WebFrame accessibilityRoot]):

Tools: AX: WK1 needs to use the ScrollView attachment for AXScrollArea, WK2 should not use this element.
https://bugs.webkit.org/show_bug.cgi?id=55706

Reviewed by Beth Dakin.

The rootElement in DRT should point to the scroll view. In WK1, that will be the parent of the rootObject.

* DumpRenderTree/mac/AccessibilityControllerMac.mm:
(AccessibilityController::focusedElement):
   Remove FIXME comment about caching the focusedElement. In fact, we shouldn't cache this
   because it could change at any time.
(AccessibilityController::rootElement):

LayoutTests: AX: WK1 needs to use ScrollView attachment for AXScrollArea, WK2 does not
https://bugs.webkit.org/show_bug.cgi?id=55706

Reviewed by Beth Dakin.

* platform/mac/accessibility/webkit-scrollarea-expected.txt:
* platform/mac/accessibility/webkit-scrollarea-position-expected.txt:
* platform/mac/accessibility/webkit-scrollarea-position.html:
* platform/mac/accessibility/webkit-scrollarea.html:



Canonical link: https://commits.webkit.org/70392@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80498 268f45cc-cd09-0410-ab3c-d52691b4dbfc