Source/WebCore/accessibility/AXObjectCache.cpp
@@ -290,6 +290,13 @@ AccessibilityObject* AXObjectCache::rootObject()
     return getOrCreate(m_document->view());
 }
 
+AccessibilityObject* AXObjectCache::rootObjectForFrame(Frame* frame)
+{
+    if (!frame)
+        return 0;
+    return getOrCreate(frame->view());
+}    
+    
 AccessibilityObject* AXObjectCache::getOrCreate(AccessibilityRole role)
 {
     RefPtr<AccessibilityObject> obj = 0;
