Source/WebCore/accessibility/AXObjectCache.h
@@ -62,7 +62,10 @@ public:
 
     static AccessibilityObject* focusedUIElementForPage(const Page*);
 
+    // Returns the root object for the entire document.
     AccessibilityObject* rootObject();
+    // Returns the root object for a specific frame.
+    AccessibilityObject* rootObjectForFrame(Frame*);
     
     // For AX objects with elements that back them.
     AccessibilityObject* getOrCreate(RenderObject*);
