Source/WebKit/mac/WebView/WebDynamicScrollBarsView.mm
@@ -558,9 +558,10 @@ static const unsigned cMaxUpdateScrollbarsPass = 2;
     [self release];
 }
 
+// This object will be the parent of the web area in WK1, so it should not be ignored.
 - (BOOL)accessibilityIsIgnored 
 {
-    return YES;
+    return NO;
 }
 
 - (void)setScrollOrigin:(NSPoint)scrollOrigin updatePositionAtAll:(BOOL)updatePositionAtAll immediately:(BOOL)updatePositionSynchronously
